# sfwbar

./: .travis.yml  README.md  config.h.meson  meson.build  meson.h.meson  meson_options.txt  sfwbar.1  sfwbar.rst
.github/workflows/: coverity.yml  freebsd.yml  main.yml
config/: a  alsa-module.widget  alsa.widget  backlight.source  backlight.widget  battery-svg.widget  battery.source  battery.widget  bluez-popup.widget  bluez.widget  cal.widget  clock-twoline.config  clock.widget  clocks.config  cpu-temp.source  cpu-temp.widget  cpu.source  cpu.widget  ct.css  dark.css  fan-rpm.widget  idle.widget  idleinhibit.widget  inv.config  inv.css  lan-bps.widget  language.widget  mb-temp.widget  memory.source  memory.widget  mpd-browser.widget  mpd-intmod.widget  mpd-mini.widget  mpd-module.widget  mpd.source  mpd.widget  ncenter.widget  network-module.widget  network.widget  oneline.config  (+49 more)
data/desktop-directories/: AudioVideo.directory  Development.directory  Education.directory  Game.directory  Graphics.directory  Network.directory  Office.directory  Settings.directory  System-Tools.directory  Utility-Accessibility.directory  Utility.directory
doc/: ChangeLog  sfwbar-alsa.1  sfwbar-alsa.rst  sfwbar-appmenu.1  sfwbar-appmenu.rst  sfwbar-bluez.1  sfwbar-bluez.rst  sfwbar-bsdclt.1  sfwbar-bsdctl.1  sfwbar-bsdctl.rst  sfwbar-dbus.1  sfwbar-dbus.rst  sfwbar-idle.1  sfwbar-idle.rst  sfwbar-idleinhibit.1  sfwbar-idleinhibit.rst  sfwbar-mpd.1  sfwbar-mpd.rst  sfwbar-ncenter.1  sfwbar-ncenter.rst  sfwbar-network.1  sfwbar-network.rst  sfwbar-pipewire.1  sfwbar-pipewire.rst  sfwbar-pulse.1  sfwbar-pulse.rst  sfwbar-volume.1  sfwbar-volume.rst  sfwbar-widgets.1  sfwbar-widgets.rst  sfwbar-wifi-iwd.1  sfwbar-wifi-iwd.rst  sfwbar-wifi.1  sfwbar-wifi.rst  sfwbar-xkbmap.1  sfwbar-xkbmap.rst  sfwbar.1  sfwbar.rst
modules/: alsactl.c  appmenu.c  bluez.c  bsdctl.c  dbus.c  idle.c  idleinhibit.c  module.h  mpd.c  ncenter.c  network.c  pipewire.c  pulsectl.c  wifi-iwd.c  wifi-nm.c  xkbmap.c
packaging/: PKGBUILD  sfwbar-0.9.1.ebuild  sfwbar-0.9.10.1.ebuild  sfwbar-0.9.4.ebuild  sfwbar-0.9.5.ebuild  sfwbar-0.9.8.spec  sfwbar-1.0_beta10.ebuild  sfwbar-1.0_beta9.ebuild  sfwbar.spec
packaging/freebsd/: Makefile  distinfo  pkg-plist
po/: LINGUAS  meson.build  pl.po  ru.po  sfwbar.pot  zh_CN.po  zh_TW.po
protocols/: ext-workspace-v1.xml  xdg-shell-unstable-v5.xml
src/: action.c  action.h  actionlib.c  appinfo.c  appinfo.h  bar.c  bar.h  basewidget.c  basewidget.h  button.c  button.h  cchart.c  cchart.h  chart.c  chart.h  clampgrid.c  client.c  client.h  config.c  config.h  css.c  exec.c  exec.h  expr.c  expr.h  exprlib.c  flowgrid.c  flowgrid.h  flowitem.c  flowitem.h  grid.c  grid.h  hypr_ipc.c  image.c  image.h  input.c  input.h  ipc.c  jpath.c  label.c  (+72 more)
src/config/: base.c  config.c  config.h  init.c  layout.c  menu.c  placer.c  scanner.c  switcher.c  toplevel.c
src/gui/: background.c  background.h  bar.c  bar.h  basewidget.c  basewidget.h  button.c  button.h  capture.c  capture.h  cchart.c  chart.c  chart.h  css.c  css.h  entry.c  entry.h  filter.c  filter.h  flowgrid.c  flowgrid.h  flowitem.c  flowitem.h  grid.c  grid.h  image.c  image.h  label.c  label.h  menu.c  menu.h  menuitem.c  menuitem.h  monitor.c  monitor.h  output.c  output.h  pager.c  pager.h  pageritem.c  (+27 more)
src/ipc/: cosmic-workspaces.c  ext-ftl.c  ext-workspace.c  foreign-toplevel.c  hyprland.c  niri.c  sway.c  sway.h  wayfire.c
src/util/: datalist.c  datalist.h  file.c  file.h  hash.c  hash.h  json.c  json.h  string.c  string.h
src/vm/: expr.c  expr.h  func.c  parser  parser.c  value.c  value.h  var.c  var.h  vm.c  vm.h
src/wayland/: cosmic-workspaces.c  foreign-toplevel.c  idle-inhibit.c  ipc.c  probe.c  xdg-output.c
