option('alsa',type:'feature',value:'auto',description:'ALSA module')
option('appmenu',type:'feature',value:'enabled',description:'Application menu generator')
option('bluez',type:'feature',value:'auto',description:'Bluez module')
option('iwd',type:'feature',value:'auto',description:'IWD wifi module')
option('nm',type:'feature',value:'auto',description:'Network Manager wifi module')
option('ncenter',type:'feature',value:'auto',description:'Notification Center module')
option('bsdctl',type:'feature',value:'disabled',description:'BSD sysctl module')
option('idle',type:'feature',value:'auto',description:'Idle notification support')
option('idleinhibit',type:'feature',value:'auto',description:'Idle inhibit protocol support')
option('network',type:'feature',value:'auto',description:'Network module')
option('pulse',type:'feature',value:'auto',description:'Pulse Audio module')
option('pipewire',type:'feature',value:'auto',description:'Pipewire module')
option('mpd',type:'feature',value:'auto',description:'Music Player Daemon module')
option('xkb',type:'feature',value:'auto',description:'xkbcommon layout lookup')
option('build-docs',type:'feature',value:'auto',description:'rebuild man pages from rst files')
